# django-xrpl-test

./: .env.example  README.MD  dev.requirements.txt  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.envs/dev/: .django.example
.envs/prod/: .django.example  .postgres.example
config/: urls.py
config/schemas/: api_v1.yml  schema_v1.yml
config/settings/: base.py  dev.py  prod.py
docker/dev/: Dockerfile
docker/prod/: Dockerfile
nginx/: nginx.conf
requirements/: dev.requirements.txt  prod.requirements.txt
tests/: conftest.py  test_auth.py  test_crud.py  test_filters.py  test_schema.py
tests/filters/: test_accounts_filters.py  test_assets_filters.py  test_payments_filters.py
tests/fixtures/: db_dump.json
xrpl_app/: admin.py  apps.py  exceptions.py  filters.py  models.py  serializers.py  urls.py  validators.py  views.py
xrpl_app/management/commands/: get_last_payments.py  watch_account.py
xrpl_app/migrations/: 0001_initial.py
xrpl_app/payments/: __init__.py  data.py  queries.py
xrpl_app/tests/: conftest.py  test_crud.py
xrpl_app/tests/fixtures/: db_dump.json
